# cross-asset-monitoring

./: .gitignore  README.md  cached_etf_close_prices.csv  changelog.md  etf_close_prices.csv  main.py  pyproject.toml  requirements.txt
app/ui/: analysis_context.py  sidebar_agent.py  tab1_overview.py  tab2_factors.py  tab3_risk_contrib.py  tab4_methodology.py  theme.py
backend/: __init__.py  backtester.py  config.py  data.py  factors.py  models.py  moments.py  perfstats.py  risk.py  signals.py  structs.py  universes.py  utils.py
backend/ai/: agent.py  knowledge.py  tools.py
cross_asset_monitoring.egg-info/: PKG-INFO
docs/: factor_methodology.md
examples/: run_analysis_integration.py
tests/: README.md  test_config.py  test_data.py  test_fx_normalization.py  test_perfstats.py  test_perfstats_summary.py  test_rebal_schedule.py  test_risk_contrib.py
